# nightingale_detector

./: README.md
ngale_ros/: CMakeLists.txt  CMakeLists.txt.subdirectory  DESCRIPTION  README.md  detector.sh  package.xml  test.sh
ngale_ros/cfg/: config.yaml  template.yaml
ngale_ros/exifyay/: CMakeLists.txt
ngale_ros/exifyay/libexif/: .CMakeLists.txt.swp  CMakeLists.txt
ngale_ros/exifyay/libexif/canon/: .exif-mnote-data-canon.c.swp
ngale_ros/exifyay/libjpeg/: .CMakeLists.txt.swp  CMakeLists.txt
ngale_ros/exifyay/src/: test-exif.c
ngale_ros/include/: detector.h  interface.h  utils.h
ngale_ros/launch/: ngale_ros.launch
ngale_ros/lib/include/: YoloConfigs.h
ngale_ros/msg/: param.msg
ngale_ros/src/: detector.cpp  klvtest.cpp  listener_rgb.cpp  listener_thermal.cpp  main.cpp  misbst0601.c  misbst0601.h  parse_yaml.cpp  start_client.cpp  stop_client.cpp  test-exif.c  utils.cpp
ngale_ros/src/libklv/ridgerun/: CMakeLists.txt  README.md
ngale_ros/src/libklv/ridgerun/libs/: libgstbase-1.0.so.0.803.0  libgstcodecparsers-1.0.so.0.803.0  libgstmpegts-1.0.so.0.803.0
ngale_ros/src/libklv/ridgerun/src/: .st0604dictionary.c.swp  klvutils.c  lds.h  main.c  misbparser.h
ngale_ros/srv/: start_service.srv  stop_service.srv
