<?xml version="1.0"?>
<package format="2">
  <name>ngale_ros</name>
  <version>1.0.0</version>
  <description>The Nightingale pipeline for RGB and Thermal camera with detection.</description>

  <maintainer email="siddartha@multicorewareinc.com">Siddartha Addanki</maintainer>
  <license>GNU AGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_generation</depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>birdseye_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>birdseye_msgs</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
